--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Je vous laisse choisir le film que vous souhaitez voir.</h2>
     <h3>je vous souhaite une bonne séance</h3>
 <a class="bouton-noir-ovale" href="faf.html"><strong>Fast and Furious</strong></a>
-<a class="bouton-noir-ovale" href="twilight.html"><strong>Twilight</strong></a>
+<a class="bouton-noir-ovale" href="twi.html"><strong>Twilight</strong></a>
 <a class="bouton-noir-ovale" href="Hobbit.html"><strong>Hobbit</strong></a>
 
     </div>
